--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
         - name: simple-bank-api
-          image: 575097942860.dkr.ecr.ap-east-1.amazonaws.com/simplebank:c7cb1a80e605732c7f578fed4526a380ccadb796
+          image: 575097942860.dkr.ecr.ap-east-1.amazonaws.com/simplebank:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
