--- a/app.env
+++ b/app.env
@@ -1,5 +1,6 @@
 DB_DRIVER=mysql
-DB_SOURCE=root:rpa@tcp(localhost:3306)/simple_bank?parseTime=true
+DB_SOURCE=root:mypassword@tcp(simple-bank.cenzyx78n0yk.ap-east-1.rds.amazonaws.com:3306)/simple_bank?parseTime=true
 SERVER_ADDRESS=0.0.0.0:8080
-TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
+TOKEN_SYMMETRIC_KEY=d2d1970bc897e568158486dbacb38fd8
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
